--- a/_config.yml
+++ b/_config.yml
@@ -6,4 +6,4 @@ url: https://just-the-docs.github.io
 
 aux_links:
   Template Repository: https://github.com/just-the-docs/just-the-docs-template
-  LinkedIn: https://wwww.linkedin.com/in/carlosmdiazr/
+  LinkedIn: https://www.linkedin.com/in/carlosmdiazr/
